allows the max persize for surefire jvm