@@ -48,6 +48,13 @@
          <downloadJavadocs>true</downloadJavadocs>
         </configuration>
      </plugin>
+     <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>-Xmx4096m -XX:MaxPermSize=1024m</argLine>
+        </configuration>
+        </plugin>
     </plugins>
   </build>
 </project>
